Fix GitHub issue template YAML frontmatter

--- a/gh_issue_template.md.j2
+++ b/gh_issue_template.md.j2
@@ -1,5 +1,5 @@
 ---
-title: `test-mirrors` has encountered an error
+title: "`test-mirrors` has encountered an error"
 ---
 
 {% for issue in issues %}{% if issue.type == "request_error" %}
